@@ -9,6 +9,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Added
 - [LOG_FORWARDER] [REDIS] Support for queues, sets, publish and streams modes for log insertion
 - [LOGOMELASTICSEARCH] Handle log insertion errors returned by elasticsearch
+### Changed
+- [DEPENDENCIES] Upgrade djongo and code for pymongo>=4
 
 
 ## [2.15.0] - 2024-03-04
